fixed alignement

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -195,6 +195,7 @@ section {
   display: inline-block;
   width: 33%;
   margin: auto;
+  margin-bottom: 40px;
 }
 
 .five-l, .five-mid-l, .five-mid, .five-mid-r, .five-r {
@@ -372,14 +373,14 @@ p {
   position: absolute;
   width: 40px;
   top: 62.5%;
-  left: 48.2%;
+  left: 49%;
 }
 
 .arrow-circle {
   position: absolute;
   width: 95px;
   top: 59%;
-  left: 46.3%;
+  left: 47.1%;
 }
 
 .thin-left {
@@ -388,7 +389,7 @@ p {
   font-weight: 300;
   font-size: 19px;
   position: absolute;
-  margin-top: -145px;
+  margin-top: -175px;
   text-align: left;
 }
 
@@ -623,13 +624,14 @@ p {
 .mid-l .vinyle {
   display: inline-block;
   height: 80px;
-  margin-bottom: 170px;
+  margin-bottom: 200px;
 }
 
 .dashed-circle {
   width: 300px;
   height: 300px;
   margin: auto;
+  margin-left: 35px;
   border: 1px dashed #F72A4E;
   border-radius: 100%;
   margin-top: -50px;
